# Mealplanner-2.0

./: .gitignore  DESIGN.md  README.md  start_app.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bugfix.md  documentation.md  enhancement.md  feature.md  feature_request.md  improvement.md
backend/: .env.example  pyproject.toml
backend/.dlt/: config.toml
backend/api/: __init__.py  accounts.py  agent_tools.py  auth.py  catalog_cache.py  chat.py  credits.py  database.py  db.py  households.py  image_gen.py  ingredients.py  main.py  meal_plans.py  models.py  pending_actions.py  profile.py  recipe_db.py  recipe_gen.py  recipes.py  shopping.py
backend/pipeline/: load_usda.py  run.py
backend/pipeline/sources/: open_food_facts.py
backend/scripts/: dedup_pantry.py  expand_pantry.py  migrate_reference_data.py
backend/transform/: .user.yml  dbt_project.yml  profiles.yml
backend/transform/models/marts/: _marts.yml  dim_products.sql
backend/transform/models/staging/: _sources.yml  _stg_products.yml  stg_products.sql
backend/transform/seeds/: common_ingredients.csv  subcategory_mapping.csv
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
supabase/: config.toml
supabase/migrations/: 20260526120000_core_households_and_members.sql  20260526120100_hearth_schema.sql  20260526120200_credit_ledger.sql  20260526120300_rls_policies.sql  20260526120400_align_usda_columns.sql  20260526120500_grant_role_privileges_on_hearth.sql
(+34 files in other folders)
